--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "this-is-japan-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "axios": "^1.6.2",
-    "swr": "^2.2.4",
-    "jwt-decode": "^4.0.0",
-    "clsx": "^2.0.0",
-    "tailwindcss": "^3.3.6",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16",
-    "react-icons": "^4.12.0",
-    "zustand": "^4.4.7",
-    "date-fns": "^2.30.0",
-    "react-markdown": "^9.0.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9"
+    "typescript": "^5.4.2",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.1",
+    "@eslint/eslintrc": "^3"
   }
-} 
+}
