--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - DEBUG=1
       - DATABASE_URL=postgres://postgres:postgres@db:5432/thisisjapan
       - SECRET_KEY=dev_secret_key
-      - ALLOWED_HOSTS=localhost,127.0.0.1
+      - ALLOWED_HOSTS=localhost,127.0.0.1,backend
 
   frontend:
     build:
@@ -39,7 +39,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=development
-      - NEXT_PUBLIC_API_URL=http://localhost:8000/api
+      - NEXT_PUBLIC_API_URL=http://backend:8000
       - WATCHPACK_POLLING=true
 
 volumes:
