feat: 写真投稿実装

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     environment:
       - NODE_ENV=development
       - NEXT_PUBLIC_API_URL=http://backend:8000
-      - WATCHPACK_POLLING=true
+      - WATCHPACK_POLLING=true # ファイル変更を監視するための設定
 
 volumes:
   postgres_data: 
