--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,21 @@
-# 環境変数の設定
-# gitigonoreに記述
+# Django Settings
+DEBUG=1
+SECRET_KEY=thisishiroki
+ALLOWED_HOSTS=localhost,127.0.0.1,backend
+
+# Database Configuration
+DATABASE_URL=postgres://postgres:postgres@db:5432/thisisjapan
+
+# JWT Settings
+JWT_SECRET=myfirst_jwt_secret_key
+
+# CORS Settings
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+
+# AWS Settings
+AWS_STORAGE_BUCKET_NAME=thisisjapan-files
+AWS_ACCESS_KEY_ID=your_aws_access_key_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+AWS_DEFAULT_REGION=ap-northeast-1
+AWS_S3_CUSTOM_DOMAIN=your_cloudfront_domain_here
+
